force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/ArdiraSurvey__Ardira_Survey_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for SurveyVista.</description>
    <label>SurveyVista Configuration</label>
</CustomObject>