force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Automatically_Save_Responses_in_Seconds__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Automatically_Save_Responses_in_Seconds__c</fullName>
    <defaultValue>10</defaultValue>
    <description>System automatically saving survey participants responses on next/prev/submit navigation button clicks. In addition, to enable system automatically save responses every &lt;n&gt; seconds, specify &lt;n&gt; value here.</description>
    <inlineHelpText>System automatically saving survey participants responses on next/prev/submit navigation button clicks. In addition, to enable system automatically save responses every &lt;n&gt; seconds, specify &lt;n&gt; value here.</inlineHelpText>
    <label>Automatically Save Responses in Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>