force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Border_For_Non_Textual_Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Border_For_Non_Textual_Question__c</fullName>
    <defaultValue>&quot;2&quot;</defaultValue>
    <description>Border for non-textual questions, answer choices.
0 - None, 1 - Light, 2 - Dark</description>
    <inlineHelpText>Border for non-textual questions, answer choices.
0 - None, 1 - Light, 2 - Dark</inlineHelpText>
    <label>Dep Border for non-textual questions</label>
    <length>1</length>
    <type>Text</type>
</CustomField>