force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Default_Community_Responder_Page__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Default_Community_Responder_Page__c</fullName>
    <description>Default community Survey Responder Page to set for a newly created survey</description>
    <inlineHelpText>Set the default community Survey Responder Page for a newly created survey</inlineHelpText>
    <label>Default Survey Community Responder Page</label>
    <length>40</length>
    <type>Text</type>
</CustomField>