force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Default_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Default_Record_Owner__c</fullName>
    <description>When a record is created by survey response, assign this user as the record owner</description>
    <inlineHelpText>When a record is created by survey response mapping, assign this user as the record owner</inlineHelpText>
    <label>Default Record Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>