force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Default_Survey_Community__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Default_Survey_Community__c</fullName>
    <description>Default community to set for a newly created survey</description>
    <inlineHelpText>Default community to set for a newly created survey</inlineHelpText>
    <label>Default Survey Community</label>
    <length>150</length>
    <type>Text</type>
</CustomField>