force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__JSON_Minimize__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__JSON_Minimize__c</fullName>
    <defaultValue>0</defaultValue>
    <description>JSON Minimizing on Survey Export, supported from 0 - 2.</description>
    <inlineHelpText>0 - No JSON Minimizing on Survey Export &amp; Survey Responder. 1 - Minimize Answer Choices in Survey Export &amp; Survey Responder JSON.</inlineHelpText>
    <label>JSON Minimize</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>