force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Large_File_Upload_Interface_Page__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Large_File_Upload_Interface_Page__c</fullName>
    <description>Specify URL / Link to Community Page in which File Upload for Guest component is embedded.</description>
    <inlineHelpText>To allow a large file upload by a guest user, configure a separate experience builder page and specify the page url here.</inlineHelpText>
    <label>Large File Upload Interface Page</label>
    <type>Url</type>
</CustomField>