force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Power_By__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Power_By__c</fullName>
    <description>To store text values for the powered by.</description>
    <inlineHelpText>Powered by text to display in footer area of the Survey Responder interface.</inlineHelpText>
    <label>Power By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>