force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Power_By_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Power_By_URL__c</fullName>
    <description>URL link for the Powered by text.</description>
    <inlineHelpText>Forwarding URL link for the Powered by text.</inlineHelpText>
    <label>Power By URL</label>
    <type>Url</type>
</CustomField>