force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Salesforce_Data_Max_Records_Limit__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Salesforce_Data_Max_Records_Limit__c</fullName>
    <defaultValue>1500</defaultValue>
    <description>Maximum number of records that can be fetched via Salesforce Data Question types.</description>
    <inlineHelpText>Maximum number of records that can be fetched via Salesforce Data Question types.</inlineHelpText>
    <label>Salesforce Data Max Records Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>