force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Skip_Survey_Metrics_Update__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Skip_Survey_Metrics_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, metrics about number of surveys sent, completed etc. are not updated as soon as a survey result status changes.</description>
    <inlineHelpText>If checked, metrics about number of surveys sent, completed etc. are not updated as soon as a survey result status changes. This should be checked if a survey is being sent to large number of recipients.</inlineHelpText>
    <label>Skip Survey Metrics Update</label>
    <type>Checkbox</type>
</CustomField>