force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Survey_Background_Images_Library_Id__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Background_Images_Library_Id__c</fullName>
    <description>Survey background images are stored in this library.</description>
    <inlineHelpText>Survey background images are stored in this library.</inlineHelpText>
    <label>Survey Background Images Library Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>