force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Survey_Cache_Type__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Cache_Type__c</fullName>
    <description>Type of cache to use for Survey JSON used to build the survey response JSON.</description>
    <inlineHelpText>Type of cache to use for Survey JSON used to build the survey response JSON. No value means caching will not be used. A value of &apos;File&apos; means Salesforce files are used for caching.</inlineHelpText>
    <label>Survey Cache Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>