force-app/main/default/objects/ArdiraSurvey__Ardira_Survey_Configuration__c/fields/ArdiraSurvey__Tabular_Report_Alternate_Question_Field__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Tabular_Report_Alternate_Question_Field__c</fullName>
    <description>Set a field API Name to use as Question Text for the Tabular Report.</description>
    <inlineHelpText>Set a field API Name to use as Question Text for the Tabular Report.</inlineHelpText>
    <label>Tabular Report Alternate Question Field</label>
    <length>75</length>
    <type>Text</type>
</CustomField>